src/objects/SynchronizeToBannerLog__c.object
<CustomObject>
    <description>A object to track the issues various *ToBanner__c objects have. All will be coded to create a single tracking object list that can be viewed and followed up on in Salesforce.</description>
    <fields>
        <fullName>ReferenceId__c</fullName>
        <label>Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceType__c</fullName>
        <description>The Salesforce object type this record refers to.</description>
        <label>Reference Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  ReferenceId__c, ReferenceId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolvedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Synchronize_To_Banner_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResolvedDate__c</fullName>
        <description>The date and time the synchronization error was marked as resolved.</description>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark the error reference as resolved.</description>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SynchronizationError__c</fullName>
        <description>The error that occurred in the referenced object.</description>
        <label>Synchronization Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Synchronize To Banner Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>ReferenceId__c</columns>
        <columns>ReferenceType__c</columns>
        <columns>Resolved__c</columns>
        <columns>ResolvedBy__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Transcripts_Logs</fullName>
        <columns>Reference__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>ReferenceType__c</columns>
        <columns>SynchronizationError__c</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReferenceType__c</field>
            <operation>notEqual</operation>
            <value>TranscriptToBanner__c</value>
        </filters>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Non-Transcripts Logs</label>
        <sharedTo>
            <role>ITHelpDesk</role>
            <role>IT_Group</role>
            <role>QATeam</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BSL-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Synchronize To Banner Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>